--- a/DockerfileLocal
+++ b/DockerfileLocal
@@ -1,9 +1,10 @@
 FROM utsocials/node-posgres-pipeline
 
-USER postgres
-
 EXPOSE 5000
 
-RUN     /etc/init.d/postgresql start &&\
+USER postgres
+
+ENTRYPOINT     /etc/init.d/postgresql start &&\
   psql --command "CREATE USER root WITH SUPERUSER PASSWORD 'password';" &&\
-    createdb testdb && node index.js --host=0.0.0.0 --port 5000
+    createdb testdb &&\
+    node test.js && HOST='0.0.0.0' PORT=5000 node index.js
