--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -1,5 +1,6 @@
 client:
     build: .
+#    command: node index.js
     dockerfile: DockerfileLocal
     environment:
         NODE_ENV: development
