--- a/DockerfileLocal
+++ b/DockerfileLocal
@@ -7,4 +7,4 @@ USER postgres
 ENTRYPOINT     /etc/init.d/postgresql start &&\
   psql --command "CREATE USER root WITH SUPERUSER PASSWORD 'password';" &&\
     createdb testdb &&\
-    node test.js && HOST='0.0.0.0' PORT=5000 node index.js
+    node test.js && HOST='0.0.0.0' PORT=5000 node_modules/.bin/nodemon index.js
